Fix compiler warnings with and without Copilot